--- a/ticketchain/package.json
+++ b/ticketchain/package.json
@@ -14,6 +14,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "swiper": "^11.1.4",
     "thirdweb": "^5.32.1"
   },
   "devDependencies": {
