--- a/ticketchain/package.json
+++ b/ticketchain/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.1.4",
     "@material-tailwind/react": "^2.1.9",
     "next": "14.2.4",
+    "pino-pretty": "^11.2.1",
     "react": "^18",
     "react-dom": "^18",
     "swiper": "^11.1.4",
