--- a/ticketchain/package.json
+++ b/ticketchain/package.json
@@ -11,14 +11,20 @@
   "dependencies": {
     "@heroicons/react": "^2.1.4",
     "@material-tailwind/react": "^2.1.9",
-    "next": "14.2.4",
+    "next": "^14.2.5",
+    "next-compose-plugins": "^2.2.1",
+    "next-transpile-modules": "^10.0.1",
     "pino-pretty": "^11.2.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "swiper": "^11.1.4",
     "thirdweb": "^5.32.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.7",
+    "@babel/preset-env": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
+    "babel-eslint": "^10.1.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
