--- a/ticketchain/package.json
+++ b/ticketchain/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@heroicons/react": "^2.1.4",
     "@material-tailwind/react": "^2.1.9",
+    "@react-icons/all-files": "^4.1.0",
     "next": "^14.2.5",
     "next-compose-plugins": "^2.2.1",
     "next-transpile-modules": "^10.0.1",
     "pino-pretty": "^11.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
+    "react-query": "^3.39.3",
     "swiper": "^11.1.4",
     "thirdweb": "^5.32.1"
   },
