--- a/ticketchain/package.json
+++ b/ticketchain/package.json
@@ -12,6 +12,8 @@
     "@heroicons/react": "^2.1.4",
     "@material-tailwind/react": "^2.1.9",
     "@react-icons/all-files": "^4.1.0",
+    "@tanstack/react-query": "^5.51.1",
+    "ethers": "^6.13.1",
     "next": "^14.2.5",
     "next-compose-plugins": "^2.2.1",
     "next-transpile-modules": "^10.0.1",
