--- a/ticketchain/package.json
+++ b/ticketchain/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/serialize": "^1.3.0",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
@@ -26,6 +27,7 @@
     "react-icons": "^5.2.1",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.25.1",
+    "react-toastify": "^10.0.5",
     "swiper": "^11.1.4",
     "thirdweb": "^5.32.1"
   },
