--- a/ticketchain/package.json
+++ b/ticketchain/package.json
@@ -29,7 +29,8 @@
     "react-router-dom": "^6.25.1",
     "react-toastify": "^10.0.5",
     "swiper": "^11.1.4",
-    "thirdweb": "^5.32.1"
+    "thirdweb": "^5.32.1",
+    "web3": "^4.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.7",
